[gd_scene load_steps=12 format=2]

[ext_resource path="res://shared/avatarspace/profilPicture.tscn" type="PackedScene" id=1]
[ext_resource path="res://shared/back/back_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/avatarspace/avatar_space.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/centerStar.png" type="Texture" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/check.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/cancel.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/validate.png" type="Texture" id=8]
[ext_resource path="res://assets/theme/backgroundPanel.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=10]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=21]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 21 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.88776
margin_right = 1.8877
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" parent="." instance=ExtResource( 2 )]

[node name="profilPicture" parent="." instance=ExtResource( 1 )]
margin_left = 52.8191
margin_top = 90.8709
margin_right = -865.181
margin_bottom = -313.129

[node name="Stars" type="Control" parent="."]
anchor_left = 0.07
anchor_top = 0.697
anchor_right = 0.314
anchor_bottom = 0.798
margin_left = -1.05945
margin_right = -1.05945
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsImage" type="TextureRect" parent="Stars"]
anchor_left = 0.245
anchor_top = 0.118
anchor_right = 0.245
anchor_bottom = 1.0
margin_right = 50.0
margin_bottom = -14.139
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsNumber" type="Label" parent="Stars"]
anchor_left = 0.46
anchor_top = 0.256
anchor_right = 0.572
anchor_bottom = 0.85
text = ":11
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerName" type="LineEdit" parent="."]
anchor_left = 0.096
anchor_top = 0.602
anchor_right = 0.312
anchor_bottom = 0.666
margin_left = -1.92001
margin_top = -0.440002
margin_right = -71.36
margin_bottom = -0.52002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateName" type="Button" parent="."]
anchor_left = 0.26
anchor_top = 0.607
anchor_right = 0.301
anchor_bottom = 0.607
margin_left = 0.529724
margin_top = -0.529724
margin_right = 0.529724
margin_bottom = 35.4703
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="HScrollBar" type="ScrollContainer" parent="."]
anchor_left = 0.338
anchor_top = 0.04
anchor_right = 0.956
anchor_bottom = 0.197
margin_top = -2.04493
margin_bottom = -2.24493
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemType" type="HBoxContainer" parent="HScrollBar"]

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
anchor_left = 0.374
anchor_top = 0.385
anchor_right = 0.889
anchor_bottom = 0.932
margin_left = -2.46362
margin_top = -3.89325
margin_right = 9.53638
margin_bottom = 8.10675
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPurchase" type="WindowDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Validate" type="TextureButton" parent="ConfirmPurchase"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.43
anchor_bottom = 0.9
texture_normal = ExtResource( 8 )
expand = true

[node name="Cancel" type="TextureButton" parent="ConfirmPurchase"]
anchor_left = 0.55
anchor_top = 0.7
anchor_right = 0.68
anchor_bottom = 0.9
texture_normal = ExtResource( 7 )
expand = true

[node name="Confirm" type="Label" parent="ConfirmPurchase"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
text = "Veux tu acheter cette objet ?"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ConfirmPurchase"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
text = "Veux tu acheter cette objet ?"
align = 1
valign = 1

[node name="NotEnoughStars" type="WindowDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="NotEnoughStars"]
anchor_left = 0.45
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.9
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotEnough" type="Label" parent="NotEnoughStars"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
text = "Tu n'as pas assez d'Ã©toiles ! Continue de jouer !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ValidateName" to="." method="_on_ValidateName_pressed"]
[connection signal="pressed" from="ConfirmPurchase/Validate" to="." method="_on_Validate_pressed"]
[connection signal="pressed" from="ConfirmPurchase/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="NotEnoughStars/Ok" to="." method="_on_Ok_pressed"]
